style.scss
/* ... */
.slideshow {
    height: inherit !important;
}
.slide {
    display: inline-block;
    width: auto;
    height: 100%;
    max-width: 90vw;
    transform: translate3d(0, 0, 0);
    box-shadow: none !important;
    perspective: 200px;

    @media (min-width : 768px) {
        max-width: 75vw;
    }
    

    img {
        filter: blur(3px) brightness(0.9);
        // transition: filter 400ms ease-in-out;
        // transform: translate3d(0, 0, 0);


        max-width: 100%;
        max-height: 100%;

        position: relative;
        top: 50%;
        perspective: 200px;
        transform: translateY(-50%) translate3d(0, 0, 0) translateZ(-20px);
        transition: transform $carousel-duration ease-in-out, filter $carousel-duration ease-in-out;
        padding: 20px 0;
        // padding-top: $header-mobile-height + $header-mobile-padding;

        @media (min-width : 768px) {
            padding: 50px 25px;
        }

    }

    &.active {
        img {
            filter: none;
            transform: translateY(-50%) translate3d(0, 0, 0);
        }
    }
}

#contact {
    text-align: center;

    input, textarea {
        width: 100%;
        height: 3em;
        margin-bottom: 1em;
        padding: 0.5em;
        font-size: 14px;
        border: 1px solid $outlineColor;

        &:disabled {
            background-color: $lightGrey;
        }
    }

    textarea {
        height: 126px;
    }

    form {
        width: 700px;
        margin: auto;
        position: relative;
        top: 50%;
        transform: translateY(-50%);
    }

    #submit {
        float: right;
        color: $greyText;

        &:hover {
            color: $darkBlue;
        }

        &.disabled {
            text-shadow: none;
            color: $greyText;
            pointer-events: none;
        }
    }
    
}

.profile {
    border-right: 1px solid $lightGrey;
    padding: 2%;
    height: 100%;
    background-color: $lightGrey;
    transition: background-color $button-transistion-duration ease-in-out;
    position: relative;
    z-index: 10;

    &.mobile-hidden {
        background-color: transparent;
        pointer-events: none;

        @media (min-width: 768px) {
            pointer-events: initial;
        }
    }

    h3 {
        height: auto;

        margin: 0;
        color: $darkGrey;
        width: 100%;
        text-align: center;
    }
    p {
        height: auto;
        width: 100%;
        text-align: center;
        color: $darkGrey;
    }

    .contact {
        position: absolute;
        bottom: 10px;
        margin-left: 0;
        left: 0;
        right: 0;
        text-align: center;

        width: 100%;

        a {
            padding: 0;
            margin-left: 0;
            margin-bottom: 20px;
        }
        #contact-button {
            position: relative;
            top: -10px;
        }

        .social .fa {
            padding-left: 8px;
            font-size: 1.4em;
            padding-right: 8px;
        }
    }

    @media (min-width: 768px) {
        position: fixed;
        width: $sidebar-width;
        height: 100%;
        padding: 0;
        h3 {
            text-align: center;
            float: none;
            width: 100%;
            margin-top: 0;
        }
        p {
            margin-top: -1.3em;
            font-size: 16px;
            text-align: center;
            letter-spacing: 2px;
        }
        .img-circle {
            height: auto;
            width: 55%;
            margin-top: 25%;
            margin-left: 24%;
        }

    }
}

.gallery-nav {
  margin: 0 auto 30px;
  text-align: center;
  display: table;
  border-spacing: 8px;
  
    li {
        float: none;
        display: table-row;
        
        padding: 5px 10px;

        >a {
            display: table-cell;
            // border: 1px solid #bbb;
            padding-left: 16px;
            padding-right: 16px;
        }
        &.current a {
            // border: 1px solid rgb(0,0,128);
            color: rgb(0,0,128);
        }
    }
    
}
// ::-webkit-scrollbar {
//     -webkit-appearance: none;
//     width: 7px;
//     height: 0;
// }
// ::-webkit-scrollbar-thumb {
//     border-radius: 4px;
//     background-color: rgba(0,0,0,.5);
//     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
// }
.gallery-wrapper {
    // display: table;
    position: absolute;
    top: 0;
    left: 20%;
    height: 100%;
    width: auto;
    white-space: nowrap;
    overflow-y: hidden;
    overflow-x: scroll;
    transform: translate3d(0, 0, 0);
    
    // .gallery {
        
        // vertical-align: top;
        // display: table-row;
        .img-container {
            // display: table-cell;
            display: inline-block;
            width: 90%;
            height: 100%;
            transform: translate3d(0, 0, 0);

            img {
                max-width: 100%;
                max-height: 100%;

                position: relative;
                top: 50%;
                transform: translateY(-50%) translate3d(0, 0, 0);
            }
        }

        
    // }   
}



//OLD STYLES
.preload * {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -ms-transition: none !important;
  -o-transition: none !important;
  transition: none !important;
}

html,
body {
    margin: 0;
    padding: 0;
    position: relative;
    @media (min-width: 768px) {
        // overflow: hidden;
    }
    height: 100%;
}

html {
    font-family: $source-sans;
    font-size: 18px;
    font-weight: 300;
    line-height: 1.6;
    @media (min-width: 768px) {
        font-size: 20px;
    }
}

body {
    color: #515151;
    background-color: #FAFAFA;
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    overflow: hidden; 
}

a {
    text-decoration: none;
    transition: all 0.3s;
}

h1 {
    font-size: 2rem;
}
/* ... */

